Applied Spotless fixes